tests/ui/not-send.stderr
error[E0277]: `proc_macro::Span` cannot be sent between threads safely
 --> $DIR/not-send.rs:5:5
  |
4 |     fn requires_send<T: Send>() {}
  |                         ---- required by this bound in `requires_send`
5 |     requires_send::<Span>();
  |     ^^^^^^^^^^^^^^^^^^^^^ `proc_macro::Span` cannot be sent between threads safely
  |
  = help: within `Span`, the trait `Send` is not implemented for `proc_macro::Span`
  = note: required because it appears within the type `proc_macro2::imp::Span`
  = note: required because it appears within the type `Span`

error[E0277]: `Rc<()>` cannot be sent between threads safely
 --> $DIR/not-send.rs:5:5
  |
4 |     fn requires_send<T: Send>() {}
  |                         ---- required by this bound in `requires_send`
5 |     requires_send::<Span>();
  |     ^^^^^^^^^^^^^^^^^^^^^ `Rc<()>` cannot be sent between threads safely
  |
  = help: within `Span`, the trait `Send` is not implemented for `Rc<()>`
  = note: required because it appears within the type `PhantomData<Rc<()>>`
  = note: required because it appears within the type `Span`
